<?xml version="1.0"?>
<package>
  <name>create_base</name>
  <version>0.0.0</version>
  <description>Launch an iRobot create</description>
  <maintainer email="jake.anq@gmail.com">Jake Bott</maintainer>
  <author email="jake.anq@gmail.com">Jake Bott</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <export>
  </export>
</package>
