<?xml version="1.0"?>
<package>
  <name>create_description</name>
  <version>0.0.0</version>
  <description>URDFs for the iRobot Create and IARC extras</description>
  <maintainer email="jake.anq@gmail.com">Jake Bott</maintainer>
  <author email="jake.anq@gmail.com">Jake Bott</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urdf</run_depend>
  <export>
  </export>
</package>
